# MLOps-HW1

./: .dockerignore  .dvcignore  .env.example  .flake8  .gitignore  Dockerfile  Dockerfile.dashboard  Dockerfile.grpc  Makefile  README.md  clearml.conf  docker-compose.clearml.yml  docker-compose.yml  env.example  pyproject.toml  pytest.ini
.dvc/: config
app/: __init__.py  config.py  logger.py
app/api/: __init__.py  main.py
app/api/routes/: __init__.py  datasets.py  health.py  models.py
app/grpc_service/: __init__.py  ml_service.proto  ml_service_pb2.py  ml_service_pb2_grpc.py  server.py
app/ml/: __init__.py  base.py  logistic_regression.py  random_forest.py
app/services/: __init__.py  clearml_service.py  dataset_service.py  dvc_service.py  model_service.py
dashboard/: app.py
dashboard/.streamlit/: config.toml  secrets.toml
datasets/: .gitignore  iris.csv
k8s/: api-deployment.yaml  clearml-configmap.yaml  clearml-secret.yaml  dashboard-deployment.yaml  grpc-deployment.yaml  minio-deployment.yaml  minio-init-job.yaml  namespace.yaml
scripts/: __init__.py  apply_clearml_secret.sh  entrypoint_api.sh  generate_grpc.py  grpc_client_example.py  setup_clearml.sh  setup_clearml_interactive.py
tests/: __init__.py  test_api.py  test_models.py
