[tool.poetry]
name = "mlops-hw1"
version = "0.1.0"
description = "MLOps Homework 1 - ML Model Training and Inference API"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
scikit-learn = "^1.4.0"
pandas = "^2.1.0"
numpy = "^1.26.0"
joblib = "^1.3.0"
grpcio = "^1.60.0"
grpcio-tools = "^1.60.0"
protobuf = "^4.25.0"
streamlit = "^1.30.0"
dvc = {extras = ["s3"], version = "^3.40.0"}
clearml = "^1.14.0"
python-multipart = "^0.0.6"
boto3 = "^1.34.0"
loguru = "^0.7.2"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.12.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"
isort = "^5.13.0"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

